chore!: Upgrade to Java 11 (#381)
BREAKING CHANGE: Will require installing Java version 11 or higher before running.